noinst_HEADERS = pa_version.h pa_pool.h pa_os.h pa_common.h pa_base64.h pa_operation.h pa_request_charsets.h pa_request_info.h pa_array.h pa_cache_managers.h pa_charset.h pa_charsets.h pa_config_fixed.h pa_config_includes.h pa_dictionary.h pa_dir.h pa_exception.h pa_xml_exception.h pa_exec.h pa_globals.h pa_xml_io.h pa_hash.h pa_opcode.h pa_memory.h pa_request.h pa_sapi.h pa_socks.h pa_sql_connection.h pa_sql_driver_manager.h pa_stack.h pa_string.h pa_stylesheet_connection.h pa_stylesheet_manager.h pa_table.h pa_threads.h pa_types.h pa_uue.h pa_http.h pa_random.h pa_symbols.h
