INCLUDES = -I../classes -I../sql -I../lib/gd -I../lib/gc/include -I../lib/cord/include -I../lib/sdbm/apr-include -I../classes/gd @PCRE_INCLUDES@ @XML_INCLUDES@ @MIME_INCLUDES@

noinst_LIBRARIES = libtypes.a
noinst_HEADERS = pa_value.h pa_junction.h pa_method.h pa_vbool.h pa_vclass.h pa_vcode_frame.h pa_vcookie.h pa_vdate.h pa_vdouble.h pa_venv.h pa_vfile.h pa_vform.h pa_vhash.h pa_vhashfile.h pa_vimage.h pa_vint.h pa_vjunction.h pa_vmath.h pa_vmethod_frame.h pa_vmethod_frame_global.h pa_vmethod_frame_local.h pa_vobject.h pa_vrequest.h pa_vresponse.h pa_vstateless_class.h pa_vstateless_object.h pa_vstatus.h pa_vstring.h pa_vtable.h pa_vvoid.h pa_vxdoc.h pa_vxnode.h pa_wcontext.h pa_wwrapper.h pa_vmail.h pa_vmemory.h pa_vconsole.h pa_property.h pa_vproperty.h

libtypes_a_SOURCES = pa_value.C pa_vcookie.C pa_vfile.C pa_vform.C pa_vimage.C pa_vjunction.C pa_vproperty.C pa_vrequest.C pa_vresponse.C pa_vstateless_class.C pa_vstring.C pa_wcontext.C pa_vtable.C pa_vxnode.C pa_vxdoc.C pa_vstatus.C pa_vmail.C pa_vobject.C pa_vclass.C pa_vhashfile.C pa_vmath.C pa_vmethod_frame.C pa_vvoid.C pa_vhash.C pa_venv.C

EXTRA_DIST = types.vcproj
