dnl Process this file with autoconf to create configure.

AC_INIT(ltdl.c)

AC_CONFIG_AUX_DIR(../../..)

AM_INIT_AUTOMAKE(libltdl,1.2,-)
AM_CONFIG_HEADER(config_auto.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_C_CONST
AC_C_INLINE

AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_LIB_LTDL

dnl Output the makefile
AC_OUTPUT(Makefile)

# Local Variables:
# mode:shell-script
# sh-indentation:2
# End:
